--- a/jdbc-resource-server/src/main/resources/application.properties
+++ b/jdbc-resource-server/src/main/resources/application.properties
@@ -2,13 +2,14 @@ server.port=8081
 #server.session.timeout=300
 #server.context-path=/admin
 security.oauth2.resource.id=oauth2-resource
-security.oauth2.resource.token-info-uri=http://localhost:8080/oauth/check_token
+#security.oauth2.resource.token-info-uri=http://localhost:8080/uaa/oauth/check_token
 security.oauth2.resource.prefer-token-info=true
 logging.level.org.springframework.security=DEBUG
+management.security.enabled=false
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/alan-oauth?characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=111111
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-idle=5
 spring.datasource.max-wait=10000
