--- a/oauth-server/src/main/resources/application.yml
+++ b/oauth-server/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/alan-oauth?characterEncoding=UTF-8
     username: root
-    password: 111111
+    password: root
     driver-class-name: com.mysql.jdbc.Driver
 server:
   context-path: /uaa
